@@ -17,12 +17,12 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
     <!-- java related -->
-    <java.version>1.7</java.version>
+    <java.version>1.8</java.version>
     <jacoco.version>0.7.5.201505241946</jacoco.version>
 
     <!-- Spring dependencies -->
-    <spring.boot.version>1.3.0.RELEASE</spring.boot.version>
-    <spring.cloud.parent.version>Brixton.M2</spring.cloud.parent.version>
+    <spring.boot.version>1.4.1.RELEASE</spring.boot.version>
+    <spring.cloud.parent.version>Camden.SR1</spring.cloud.parent.version>
 
     <!-- CXF -->
     <cxf.version>3.1.4</cxf.version>
@@ -36,10 +36,10 @@
 
     <!-- test related dependencies -->
     <rest.assured.version>2.4.1</rest.assured.version>
-    <flyway.version>3.2.1</flyway.version>
+    <flyway.version>4.0.1</flyway.version>
 
     <!-- utilites libraries -->
-    <guava.version>19.0-rc2</guava.version>
+    <guava.version>19.0</guava.version>
 
     <!-- build related -->
     <docver.maven.plugin.version>0.3.6</docver.maven.plugin.version>
@@ -63,7 +63,7 @@
   <modules>
     <module>domain</module>
     <module>service-support</module>
-	<module>test-webapp</module>
+	  <module>test-webapp</module>
   </modules>
 
   <dependencyManagement>
@@ -150,6 +150,12 @@
         <groupId>org.flywaydb.flyway-test-extensions</groupId>
         <artifactId>flyway-spring-test</artifactId>
         <version>${flyway.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
 
     </dependencies>
@@ -229,7 +235,7 @@
           <version>2.17</version>
           <configuration>
             <forkCount>1</forkCount>
-            <argLine>-Xmx1024m -XX:PermSize=96m -XX:MaxPermSize=192m -Djava.security.egd=file:/dev/./urandom</argLine>
+            <argLine>-Xmx1024m -Djava.security.egd=file:/dev/./urandom</argLine>
             <includes>
               <include>**/*Test*.java</include>
               <include>**/*Test*.groovy</include>
